# agario

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
client/: application.c  application.h  connection.c  connection.h  draw.c  draw.h  game.c  game.h  main.c  ui.c  ui.h
server/: action_queue.c  main.c  network.c  network.h  state.c  state.h
shared/: action_queue.c  action_queue.h  config.h  random.c  random.h  serialization.c  serialization.h  types.h  utils.c  utils.h
